<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShakeApp</string>
    <string name="action_settings">Settings</string>

    <string name="list_item_new">NEW</string>
    <string name="fetching_events_text">FETCHING EVENTS</string>
    <string name="fetching_icon_text"></string>
    <string name="toast_no_internet">No Internet connection</string>
    <string name="title_activity_detail">QuakeDetails</string>

    <string name="hello_world">Hello world!</string>
    <string name="toast_no_quake_info">No quake info...</string>
    <string name="toast_unable_create_maps">Unable to create map</string>

    <!-- Detail Activity Icons -->
    <string name="iconRegion">&#xf0ac;</string>
    <string name="iconMagnitude">&#xf1fe;</string>
    <string name="iconDepth">&#xf103;</string>
    <string name="iconDate">&#xf133;</string>
    <string name="iconTime">&#xf017;</string>
    <string name="iconLocation">&#xf041;</string>
    <string name="notification_new_quakes">" New Earthquakes"</string>
    <string name="notification_new_quakes_magnitudes">"Magnitudes: "</string>

</resources>
